--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=tonemail@gmail.com
 EMAIL_HOST_PASSWORD=ton_mot_de_passe_app
+
+CLOUDINARY_CLOUD_NAME=xxxx
+CLOUDINARY_API_KEY=xxxx
+CLOUDINARY_API_SECRET=xxxx
