--- a/.env
+++ b/.env
@@ -4,6 +4,10 @@ EMAIL_USE_TLS=True
 EMAIL_HOST_USER=tonemail@gmail.com
 EMAIL_HOST_PASSWORD=ton_mot_de_passe_app
 
-CLOUDINARY_CLOUD_NAME=xxxx
-CLOUDINARY_API_KEY=xxxx
-CLOUDINARY_API_SECRET=xxxx
+SECRET_KEY=9pnc^)v^txv9o*b_zrxnk68r(d%+684a^cjq2bm368wh0dh5k4
+
+DEBUG=True
+
+CLOUDINARY_CLOUD_NAME=moncloud
+CLOUDINARY_API_KEY=123456789012345
+CLOUDINARY_API_SECRET=abcdefg1234567890hijklmn
