--- a/.env
+++ b/.env
@@ -1,13 +1,20 @@
-EMAIL_HOST=smtp.gmail.com
+# .env (NE JAMAIS PARTAGER CE FICHIER!)
+SECRET_KEY="9pnc^)v^txv9o*b_zrxnk68r(d%+684a^cjq2bm368wh0dh5k4"  # ⭐ OBLIGATOIRE!
+DB_NAME="djossy_db"
+DB_USER="postgres"
+DB_PASSWORD="angerevel240982"  # À changer si possible
+DB_HOST="localhost"
+DB_PORT="5432"
+PYTHON_VERSION = 3.10.6
+
+# Configuration email (optionnel)
+EMAIL_HOST="smtp.gmail.com"
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=tonemail@gmail.com
-EMAIL_HOST_PASSWORD=ton_mot_de_passe_app
+EMAIL_HOST_USER="votre@email.com"
+EMAIL_HOST_PASSWORD="motdepasse-email"
 
-SECRET_KEY=9pnc^)v^txv9o*b_zrxnk68r(d%+684a^cjq2bm368wh0dh5k4
-
-DEBUG=True
-
-CLOUDINARY_CLOUD_NAME=moncloud
-CLOUDINARY_API_KEY=123456789012345
-CLOUDINARY_API_SECRET=abcdefg1234567890hijklmn
+# Cloudinary (optionnel)
+CLOUDINARY_CLOUD_NAME="dp5cmj20c"
+CLOUDINARY_API_KEY="862575749376684"
+CLOUDINARY_API_SECRET="862575749376684"
