Ajout des variables Cloudinary et nouveaux templates upload

--- a/.env
+++ b/.env
@@ -18,3 +18,5 @@ EMAIL_HOST_PASSWORD="motdepasse-email"
 CLOUDINARY_CLOUD_NAME="dp5cmj20c"
 CLOUDINARY_API_KEY="862575749376684"
 CLOUDINARY_API_SECRET="862575749376684"
+
+DEBUG=True
