Initial commit: projet Django avec config Render

--- a/.env
+++ b/.env
@@ -1,22 +1,24 @@
-# .env (NE JAMAIS PARTAGER CE FICHIER!)
-SECRET_KEY="9pnc^)v^txv9o*b_zrxnk68r(d%+684a^cjq2bm368wh0dh5k4"  # ⭐ OBLIGATOIRE!
-DB_NAME="djossy_db"
-DB_USER="postgres"
-DB_PASSWORD="angerevel240982"  # À changer si possible
-DB_HOST="localhost"
-DB_PORT="5432"
-PYTHON_VERSION = 3.10.6
+# 🔐 Clé secrète Django
+SECRET_KEY=9pnc^)v^txv9o*b_zrxnk68r(d%+684a^cjq2bm368wh0dh5k4
 
-# Configuration email (optionnel)
-EMAIL_HOST="smtp.gmail.com"
+# 🚫 En production, ne jamais activer le mode debug
+DEBUG=False
+
+# 🌐 Configuration base de données (via Render ou ElephantSQL par ex)
+DB_NAME=djossy_db
+DB_USER=postgres
+DB_PASSWORD=angerevel240982
+DB_HOST=localhost
+DB_PORT=5432
+
+# 📦 Cloudinary pour les médias
+CLOUDINARY_CLOUD_NAME=dp5cmj20c
+CLOUDINARY_API_KEY=862575749376684
+CLOUDINARY_API_SECRET=862575749376684
+
+# 📧 Email
+EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER="votre@email.com"
-EMAIL_HOST_PASSWORD="motdepasse-email"
-
-# Cloudinary (optionnel)
-CLOUDINARY_CLOUD_NAME="dp5cmj20c"
-CLOUDINARY_API_KEY="862575749376684"
-CLOUDINARY_API_SECRET="862575749376684"
-
-DEBUG=True
+EMAIL_HOST_USER=allechiobin@gmail.com
+EMAIL_HOST_PASSWORD=Os@57810550
