Déploiement vers Render

--- a/.env
+++ b/.env
@@ -1,24 +1,31 @@
-# 🔐 Clé secrète Django
-SECRET_KEY=9pnc^)v^txv9o*b_zrxnk68r(d%+684a^cjq2bm368wh0dh5k4
+# 🔐 Django Secret Key
+SECRET_KEY=django-insecure-4v8y@k3_80ej+#h4+l_4f3kt9&x!n8q$9!5ca%mxk4ez_p0d2b
 
-# 🚫 En production, ne jamais activer le mode debug
+# Mode Debug
 DEBUG=False
 
-# 🌐 Configuration base de données (via Render ou ElephantSQL par ex)
+# 🌍 Hôtes autorisés (séparés par virgules)
+ALLOWED_HOSTS=localhost,127.0.0.1,votresite.onrender.com
+
+# ✅ URL correcte pour Supabase (à corriger selon Supabase)
+DATABASE_URL=postgresql://postgres:angerevel240982@aws-0-eu-west-1.pooler.supabase.com:5432/djossy_db
+
+# 🌐 Base de données
 DB_NAME=djossy_db
-DB_USER=postgres
+DB_USER=postgres 
 DB_PASSWORD=angerevel240982
-DB_HOST=localhost
+
+DB_HOST=votre_host
 DB_PORT=5432
 
-# 📦 Cloudinary pour les médias
+# ☁️ Cloudinary
 CLOUDINARY_CLOUD_NAME=dp5cmj20c
 CLOUDINARY_API_KEY=862575749376684
-CLOUDINARY_API_SECRET=862575749376684
+CLOUDINARY_API_SECRET=ta_clé_secrète_cloudinary
 
-# 📧 Email
+# 📧 Email - À CHANGER
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=allechiobin@gmail.com
-EMAIL_HOST_PASSWORD=Os@57810550
+EMAIL_HOST_USER=votre_email@gmail.com
+EMAIL_HOST_PASSWORD=votre_mot_de_passe_app
