Ajout configuration email

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Django
 DEBUG=False
-SECRET_KEY=votre_cle_secrete_ici
-ALLOWED_HOSTS=.onrender.com,localhost,127.0.0.1
+SECRET_KEY=django-insecure-4v8y@k3_80ej+#h4+l_4f3kt9&x!n8q$9!5ca%mxk4ez_p0d2b
+ALLOWED_HOSTS=localhost,127.0.0.1,votresite.onrender.com
 
 # Base de données
-DATABASE_URL=postgresql://user:password@host:5432/dbname
+DATABASE_URL=postgresql://djossy_db_user:0rD4tbZxDJy9LlIgLb3qX3a0DAR0buyV@dpg-d15in96uk2gs73c8nf00-a.oregon-postgres.render.com/djossy_db
 
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=votre_cloud_name
@@ -15,5 +15,5 @@ CLOUDINARY_API_SECRET=votre_api_secret
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=votre_email@gmail.com
-EMAIL_HOST_PASSWORD=votre_mot_de_passe_app
+EMAIL_HOST_USER=allechiobin@gmail.com
+EMAIL_HOST_PASSWORD=Os@0757810550s
