--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,46 @@
-# Django
+# Django et Python
 __pycache__/
 *.py[cod]
-*.pyc
 db.sqlite3
-media/*
-!media/.gitkeep
-staticfiles/
+*.sqlite3
+*.pyc
 
-# Environnement
+# Environnement et configuration
 .env
-.venv
-env/
+.env.local
+.env.*
+!.env.example
 venv/
 ENV/
 
-# VS Code
-.vscode/
-*.code-workspace
-
-# Fichiers système Windows
-Thumbs.db
-Desktop.ini
+# Médias et statiques
+/media/*
+!media/.gitkeep
+/static/
+/staticfiles/
 
 # Fichiers de déploiement
 *.log
+/logs/
 render.yaml
 render-build.log
-
-# Base de données
-*.sqlite3
-*.sql
-*.bak
 
 # Fichiers sensibles
 secrets.json
 *.key
 *.pem
+.credentials/
 
-# Fichiers statiques et média
-/static/
-/media/
-/staticfiles/
+# VS Code
+.vscode/
+*.code-workspace
 
-# Node (si frontend)
-node_modules/
-package-lock.json
+# Système
+Thumbs.db
+.DS_Store
+Desktop.ini
 
-# Python
-*.pyc
-__pycache__/
-*.pyo
-*.pyd
-.Python
-dist/
-build/
-*.egg-info/
+# Cache et temporaires
+*.cache
+*.tmp
+.pytest_cache/
