--- a/render.yaml
+++ b/render.yaml
@@ -3,24 +3,18 @@ services:
     name: djossy-de-baby
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn djossy.wsgi:application
+    startCommand: gunicorn djossy_de_baby.wsgi:application
     envVars:
-      - key: DEBUG
-        value: False
-      - key: SECRET_KEY
-        generateValue: true
-      - key: ALLOWED_HOSTS
-        value: djossy-de-baby.onrender.com
-      - key: DATABASE_URL
-        fromDatabase:
-          name: djossy-db
-          property: connectionString
-      - key: CLOUDINARY_URL
-        sync: false
-      - key: EMAIL_HOST_USER
-        sync: false
-      - key: EMAIL_HOST_PASSWORD
-        sync: false
+      - key: DB_NAME
+        value: your_database_name
+      - key: DB_USER
+        value: your_database_user
+      - key: DB_PASSWORD
+        value: your_database_password
+      - key: DB_HOST
+        value: your_database_host
+      - key: DB_PORT
+        value: your_database_port
 
 databases:
   - name: djossy-db
